Added last parts of the swagger api docs
